--- a/Layouts/UKSummary.yaml
+++ b/Layouts/UKSummary.yaml
@@ -131,12 +131,12 @@ summary:
           colour: 6
           fill: true
           rollingAverage: false
-          display: true
+          display: false     # Can't display weekly figures - different scale, Will need to wait until we have daily.
         
         valueItems: 
-          - label: Weekly
-            tooltip: Weekly number of deaths where COVID-19 is mentioned as a cause on the death certificate, registered during the week ending {date} - chart shows 7-day rolling average
-            value: newOnsDeathsByRegistrationDate
+          # - label: Weekly
+          #   tooltip: Weekly number of deaths where COVID-19 is mentioned as a cause on the death certificate, registered during the week ending {date} - chart shows 7-day rolling average
+          #   value: newOnsDeathsByRegistrationDate
 
           - label: Total
             tooltip: Total number of deaths where COVID-19 is mentioned as a cause on the death certificate, registered up to {date}
