--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -97,7 +97,7 @@ cards:
   #           - label: Date reported
   #             value: date
   #             type: date
-  #             tooltip: Date reported by the Department of Health and Social Care
+  #             tooltip: Date reported on coronavirus.data.gov.uk
 
   #           - label: daily
   #             value: newDeathsByPublishDate
@@ -163,7 +163,7 @@ cards:
   #           - label: Date reported
   #             value: date
   #             type: date
-  #             tooltip: Date reported by the Department of Health and Social Care
+  #             tooltip: Date reported on coronavirus.data.gov.uk
 
   #           - label: daily
   #             value: newDeathsByPublishDate
@@ -306,7 +306,7 @@ cards:
   #         - label: Date reported
   #           value: date
   #           type: date
-  #           tooltip: Date reported by the Department of Health and Social Care
+  #           tooltip: Date reported on coronavirus.data.gov.uk
 
   #         - label: Daily deaths
   #           value: newDeathsByPublishDate
@@ -321,6 +321,306 @@ cards:
   #     - heading: About 
   #       tabType: metadata
   #       filename: cardMetadata/deaths/cardDeathsTimeSeries.md
+
+# Only shown for UK
+
+  - heading: Deaths within 28 days of positive test by date reported, by nation
+    cardType: multiAreaStatic
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: true
+
+    abstract: > 
+
+      Number of deaths of people who had had a positive test result for COVID-19 and died within 28 days
+      of the first positive test. The actual cause of death may not be COVID-19 in all cases. People who
+      died from COVID-19 but had not tested positive are not included and people who died from COVID-19
+      more than 28 days after their first positive test are not included. Data from the four nations are
+      not directly comparable as methodologies and inclusion criteria vary.
+
+    download:
+      - newDeaths28DaysByPublishDate
+      - cumDeaths28DaysByPublishDate
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        - By nation
+        - UK total
+    
+    By nation:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+          fields:
+            - label: ""
+              value: newDeaths28DaysByPublishDate
+              tooltip: Daily number of new deaths within 28 days of positive test of people resident in each nation, by date reported
+              type: bar
+              rollingAverage: false
+
+        - heading: Cumulative
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+          fields:
+            - label: ""
+              value: cumDeaths28DaysByPublishDate
+              tooltip: Cumulative total number of new deaths within 28 days of positive test of people resident in each nation, by date reported
+              type: bar
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk/
+
+            - label: daily
+              value: newDeaths28DaysByPublishDate
+              type: numeric
+              tooltip: Daily number of new deaths within 28 days of positive test of people resident in each nation, by date reported
+
+            - label: total
+              value: cumDeaths28DaysByPublishDate
+              type: numeric
+              tooltip: Cumulative total number of new deaths within 28 days of positive test of people resident in each nation, by date reported
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/deaths/cardDeathsTimeSeries.md
+
+    UK total:
+
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+          fields:
+            - label: ""
+              value: newDeaths28DaysByPublishDate
+              tooltip: Daily number of new deaths within 28 days of positive test, by date reported
+              type: bar
+              rollingAverage: false
+
+            - label: (7-day average)
+              value: newDeaths28DaysByPublishDate
+              tooltip: 7 day rolling average of the daily number of new deaths within 28 days of positive tes
+              type: line
+              colour: 3
+              rollingAverage: true
+
+        - heading: Cumulative
+          tabType: chart
+          barType: stack
+          colours: [0] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+          fields:
+            - label: ""
+              value: cumDeaths28DaysByPublishDate
+              tooltip: Cumulative total number of new deaths within 28 days of positive test, by date reported
+              type: bar
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: daily
+              value: newDeaths28DaysByPublishDate
+              type: numeric
+              tooltip: Daily number of new deaths within 28 days of positive test, by date reported
+
+            - label: total
+              value: cumDeaths28DaysByPublishDate
+              type: numeric
+              tooltip: Cumulative total number of new deaths within 28 days of positive test, by date reported
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/deaths/cardDeathsTimeSeries.md
+
+# Not shown for UK
+
+  # - heading: Daily deaths by date of death
+  #   cardType: chart
+  #   locationAware:
+  #     excluded:
+  #       areaType:
+  #         - overview
+
+  #   fullWidth: true
+  #   abstract: > 
+  #     Number of deaths of people who had had a positive test result for COVID-19, by date of death.  
+  #     The actual cause of death may not be COVID-19 in all cases. People who died from COVID-19 but
+  #     had not tested positive are not included. Methodologies and inclusion criteria vary between
+  #     the four nations.
+
+  #   download:
+  #     - newDeathsByDeathDate
+  #     - cumDeathsByDeathDate
+
+  #   tabs: 
+  #     - heading: Daily
+  #       tabType: chart
+  #       barType: normal
+  #       fields:
+  #         - label: Number of deaths
+  #           value: newDeathsByDeathDate
+  #           tooltip: Daily number of deaths by date of death
+  #           type: bar
+  #           colour: 0
+
+  #         - label: Deaths (7-day average)
+  #           value: newDeathsByDeathDate
+  #           tooltip: 7 day rolling average of the daily number of deaths
+  #           type: line
+  #           colour: 3
+  #           fill: false
+  #           rollingAverage: true
+                  
+  #     - heading: Cumulative
+  #       tabType: chart
+  #       fields:
+  #         - label: Number of deaths
+  #           value: cumDeathsByDeathDate
+  #           tooltip: Cumulative total number of deaths by date of death
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
+                  
+  #     - heading: Data
+  #       tabType: table
+  #       fields:
+  #         - label: Date of death
+  #           value: date
+  #           type: date
+  #           tooltip: Date on which the death occurred
+
+  #         - label: Daily deaths
+  #           value: newDeathsByDeathDate
+  #           type: numeric
+  #           tooltip: Daily number of deaths
+
+  #         - label: Cumulative deaths
+  #           value: cumDeathsByDeathDate
+  #           type: numeric
+  #           tooltip: Cumulative total number of deaths
+
+  #     - heading: About 
+  #       tabType: metadata
+  #       filename: cardMetadata/deaths/cardDeathsTimeSeries.md
+
+# Not shown for UK
+
+  # - heading: Daily deaths by date reported
+  #   cardType: chart
+  #   locationAware:
+  #     excluded:
+  #       areaType:
+  #         - overview
+
+  #   fullWidth: true
+  #   abstract: > 
+  #     Number of deaths of people who had had a positive test result for COVID-19, by date reported.  
+  #     The actual cause of death may not be COVID-19 in all cases. People who died from COVID-19 but
+  #     had not tested positive are not included. Methodologies and inclusion criteria vary between
+  #     the four nations. 
+    
+  #   download:
+  #     - newDeathsByPublishDate
+  #     - cumDeathsByPublishDate
+
+  #   tabs: 
+  #     - heading: Daily
+  #       tabType: chart
+  #       barType: normal
+  #       fields:
+  #         - label: Number of deaths
+  #           value: newDeathsByPublishDate
+  #           tooltip: Daily number of deaths by date reported
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
+
+  #         - label: Deaths (7-day average)
+  #           value: newDeathsByPublishDate
+  #           tooltip: 7 day rolling average of the daily number of deaths reported
+  #           type: line
+  #           colour: 3
+  #           fill: false
+  #           rollingAverage: true
+            
+  #     - heading: Cumulative
+  #       tabType: chart
+  #       fields:
+  #         - label: Number of deaths
+  #           value: cumDeathsByPublishDate
+  #           tooltip: Cumulative total number of deaths by date reported
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
+            
+  #     - heading: Data
+  #       tabType: table
+  #       fields:
+  #         - label: Date reported
+  #           value: date
+  #           type: date
+  #           tooltip: Date reported on coronavirus.data.gov.uk
+
+  #         - label: Daily deaths
+  #           value: newDeathsByPublishDate
+  #           type: numeric
+  #           tooltip: Daily number of deaths by date reported
+
+  #         - label: Cumulative deaths
+  #           value: cumDeathsByPublishDate
+  #           type: numeric
+  #           tooltip: Cumulative total number of deaths by date reported
+
+  #     - heading: About 
+  #       tabType: metadata
+  #       filename: cardMetadata/deaths/cardDeathsTimeSeries.md
+
+
 
 # Only available for England and regions
 
