Removed comment re DA Deaths from deaths.YAML

--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -1,6 +1,6 @@
 #  ALL CARDS THAT USE THE ORIGINAL DEATHS METRICS ARE STILL HERE PENDING A DECISION ON WHICH METRICS WE WILL BE USING
 #  IF WE END UP WITH 60 DAY FOR ENGLAND WE WILL FEED THAT THROUGH USING THE EXISTING METRICS AND THESE CARDS WILL BE
-#  ENGLAND AND SUB-ENGLAND ONLY.  WE WILL MOVE EXISTING PIPELINES FOR THE DAS INTO A FULL SET OF 28 DAY METRICS.
+#  ENGLAND AND SUB-ENGLAND ONLY. 
 
 #  ONS (DEATH CERTIFICATE) DEATHS ARE IN HERE IN DEV ONLY - DATA ARE READY IF GO AHEAD IS GIVEN - JUST NEED TO REMOVE
 #  DEV ONLY MARKERS
