--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -58,8 +58,10 @@ cards:
       
     fullWidth: true
     abstract: >
-      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data are not updated
-      every day.
+      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data are not
+      updated every day by all four nations and the figures for Wales are not comparable to those
+      for other nations as Wales include suspected COVID-19 patients while the other nations include 
+      only confirmed cases.
       
     download:
       - newAdmissions
